Changelog Notes:
Synchronize Grave Robber with Server.
Add Mod Options setting to announce Vagabond food finds.
Fix Grave Robber some items in pool being impossible to roll.
Fix Action Hero damage scaling not reducing by 50%.
Fix typo in Grunt Worker description.
Clarify Bloodied Crowbar Tooltip Description.
Change name of Hardy in Spanish translation to prevent conflict with Vanilla "Robusto"
Make Indefatigable Compatible with injury traits. - Credit: Fadjek.
Synchronize Prepared traits with Server to prevent items disappearing on spawn.
Add option to allow players who take the deprived Trait to spawn with a belt.